# mat-executable

./: .gitignore  CMakeLists.txt  CMakePresets.json  Product.wxs  ReadMe.md  build_mac.sh  build_mac_installer.py  build_win.bat  build_win_installer.py  build_windows.bat  conanfile.txt  generate_vs.bat  generate_xcode.sh  main.cpp
cgcustommath/: CMakeLists.txt  cgcustommath.cpp  cgcustommath.h
